update code and dockerfile

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -8,10 +8,13 @@ WORKDIR /app
 COPY . .
 
 # Cài đặt các thư viện cần thiết
-RUN pip install Flask psycopg2 flask-bcrypt
+RUN pip install Flask psycopg2 flask-bcrypt python-dotenv
+
+# Đặt biến môi trường
+ENV ConnectionString="postgresql://username:password@host:port/database"
 
 # Expose cổng mặc định cho ứng dụng Flask
 EXPOSE 5000
 
 # Command để khởi chạy ứng dụng khi container được khởi động
-CMD ["python", "app.py"]
+CMD ["python", "-m", "flask", "run", "--host=0.0.0.0"]
